# ziri

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_listener.py
.github/workflows/: ci.yml
app/: __init__.py  hub.py  main.py  schemas.py  settings.py  worker.py
app/config/: device_map.yaml  scenes.yaml
app/core/: audio_player.py  brain.py  device_registry.py  embeddings.py  listener.py  memory.py  metrics.py  orchestrator.py  personality.py  search.py  supervisor.py  tool_runner.py  tracing.py  vision.py
app/core/agents/: __init__.py  home_agent.py  info_agent.py  (+1 more)
app/data/: preferences_repository.py  session_repository.py
app/integrations/: calendar_controller.py  home_scene_controller.py  nba.py  news.py  phone_bridge.py  reminders_bridge.py  spotify_auth.py  spotify_controller.py  tts.py  weather.py
app/static/: listen.html
docker/: worker.Dockerfile
docs/: architecture.md  deployment.md  ios_shortcut_flow.md
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/elasticsearch/: deployment.yaml  service.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/prometheus/: configmap.yaml  deployment.yaml  service.yaml
k8s/worker/: deployment.yaml  service.yaml
scripts/: eval_tool_routing.py  kind-setup.sh
scripts/macos/: README.md  com.ziri.listener.plist
sql/: 001_init.sql  002_vector_index.sql  003_fulltext_index.sql
tests/: conftest.py  test_api.py  test_brain.py  test_deterministic_routing.py  test_intent_behaviors.py  test_memory.py  test_orchestrator.py  test_personality.py  test_spotify_skip_next.py  test_streaming_pipeline.py  test_supervisor.py  test_vision.py
tests/fixtures/: routing_eval.jsonl
